--- a/index.html
+++ b/index.html
@@ -85,28 +85,19 @@
                     <h2>Your Opinion Matters</h2>
             </div>
 
-            <div class="opinion-table">
-                <table>
-                    <tr>
-                        <th>Question</th>
-                        <th>Select Your Opinion</th>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>Yes, I Agree</td>
-                    </tr>
-                </table>
-            </div>
             <div class="recent-news">
                 <h2>Recent News</h2>
-                <p></p>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
                 <div class="news1-container">
                     <div class="news1">
-                        <div class="news-photo"></div>
+                        <div class="news-photo">
+                            <img class="satel" src="./assets/satelite.png" alt="">
+                        </div>
                         <div class="content">
                             <h3>Bangladesh Launches New Satellite</h3>
-                            <img src="" alt="">
-                            <p></p>
+                            <img class="al-jaz" src="./assets/al-jazeera.png" alt="">
+                            
+                            <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
                             <button>Read More</button>
                         </div>
                     </div>
