--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                     </div>
                     <div class="vision-card vision-card-2">
                         <img src="./assets/card-icon.png" alt="">
-                        <h3>Digital Transformation</h3>
-                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <h3>Green Energy</h3>
+                        <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                         <button>Learn More</button>
                     </div>
                     <div class="vision-card vision-card-3">
                         <img src="./assets/card-icon.png" alt="">
-                        <h3>Digital Transformation</h3>
-                        <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <h3>Modern Infrastructure</h3>
+                        <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                         <button>Learn More</button>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
     
             <div class="donate">
                 <h2>Donate Today</h2>
-                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability.<br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
                 <div class="amount-btn">
                     <button>100 Taka</button>
                     <button>200 Taka</button>
@@ -154,15 +154,15 @@
                 <p class="promis">We promise not to spam you!</p>
             </div>
         </main>
-        <footer>
-            <h3>Bangladesh 2.0</h3>
-            <hr>
-            <div class="social-link">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-            </div>
-        </footer>
     </div>
+    <footer>
+        <h3>Bangladesh 2.0</h3>
+        <hr>
+        <div class="social-link">
+            <a href=""><img src="./assets/facebook.png" alt=""></a>
+            <a href=""><img src="./assets/instagram.png" alt=""></a>
+            <a href=""><img src="./assets/x.png" alt=""></a>
+        </div>
+    </footer>
 </body>
 </html>
